<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.harry.weathertest.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/todayWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/today"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/search"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        android:contentDescription="@string/text_mentioning_today_s_weather"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintVertical_bias="0.058"
        android:id="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_the_city_name"
            android:contentDescription="@string/please_enter_the_city_name"
            android:id="@+id/cityName" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Search"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/search_button_to_find_weather_conditons_of_city_provided_in_text_view"/>


    <TextView
        android:id="@+id/MaxMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_min"
        android:contentDescription="@string/max_min"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/todayWeather"
        android:layout_marginLeft="56dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/maxMinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/MaxMin"
        android:layout_marginLeft="56dp"
        android:contentDescription="@string/data_not_available_yet"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:contentDescription="@string/humidity"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/maxMinText"
        android:layout_marginLeft="56dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/humidityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/humidity"
        android:layout_marginLeft="56dp"
        android:contentDescription="@string/data_not_available_yet"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:contentDescription="@string/wind"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/humidityText"
        android:layout_marginLeft="56dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/windText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/wind"
        android:layout_marginLeft="56dp"
        android:contentDescription="@string/data_not_available_yet"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/sunsetSunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset_sunrise"
        android:textStyle="bold"
        android:contentDescription="@string/sunset_sunrise"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/windText"
        android:layout_marginLeft="56dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/sunsetSunriseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sunsetSunrise"
        android:layout_marginLeft="56dp"
        android:contentDescription="@string/data_not_available_yet"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/todayWeather"
        android:layout_marginRight="58dp"
        android:contentDescription="@string/image_view_for_weather_conditions_icon"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:gravity="left"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginRight="58dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/humidity"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/description"
        app:layout_constraintHorizontal_bias="1.0" />




    <FrameLayout
        android:id="@+id/lytLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="24dp"
        android:clickable="true"
        android:background="@color/blackTransparent"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/weather_conditions_loading"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:text="Loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvLoading"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp" />

        <me.wangyuwei.loadingview.LoadingView
            android:id="@+id/vLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lv_duration="6"
            app:lv_start_color="@color/colorPrimaryDark"
            app:lv_end_color="@color/colorPrimary"
            app:lv_internal_radius="8dp"
            app:lv_external_radius="92dp"/>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
